# ArduinoSockets

./: .gitignore  .gitmodules  BLESocket.cpp  BLESocket.h  CMakeLists.txt  DummySocket.cpp  DummySocket.h  ESP32UDPSocket.cpp  ESP32UDPSocket.h  ESP8266UDPSocket.cpp  ESP8266UDPSocket.h  EthernetUDPSocket.cpp  EthernetUDPSocket.h  MqttSnMessageHandler.cpp  NRF24Socket.cpp  NRF24Socket.h  README.md  RF69Socket.cpp  RF69Socket.h  RF95Socket.cpp  RF95Socket.h  TestMain.cpp  WiFiUDPSocket.cpp  WiFiUDPSocket.h  library.h  platformio.ini
examples/hacksterio_fd69d1/: lora_receiver.c  lora_sender.c
examples/nrf24_reliable_datagram_client/: nrf24_reliable_datagram_client.ino
examples/nrf24_reliable_datagram_server/: nrf24_reliable_datagram_server.ino
mqtt-sn-gateway/: SocketInterface.h  global_defines.h
src/: MqttSnMessageHandler.cpp  MqttSnMessageHandler.h  main.cpp
